<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".AddRecipesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="409dp"
        android:layout_height="64dp"
        android:background="#8E8D8D"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="384dp"
        android:layout_height="542dp"
        android:layout_marginBottom="4dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/toolbar4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox
            android:id="@+id/checkBoxOther"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginEnd="24dp"
            android:text="@string/AddtoOther"
            app:layout_constraintEnd_toStartOf="@+id/EditTextGetIngredients"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxDinner"
            tools:text="@string/AddtoOther" />

        <CheckBox
            android:id="@+id/checkBoxDinner"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginEnd="24dp"
            android:text="@string/Dinner"
            app:layout_constraintEnd_toStartOf="@+id/EditTextGetIngredients"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxLunch"
            tools:text="@string/Dinner" />

        <CheckBox
            android:id="@+id/checkBoxLunch"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginEnd="24dp"
            android:text="@string/AddToLunch"
            app:layout_constraintEnd_toStartOf="@+id/EditTextGetIngredients"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxBreakFast"
            tools:text="@string/AddToLunch" />

        <CheckBox
            android:id="@+id/checkBoxBreakFast"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginEnd="24dp"
            android:text="@string/AddToBreakfast"
            app:layout_constraintEnd_toStartOf="@+id/EditTextGetIngredients"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxFavourites"
            tools:text="@string/AddToBreakfast" />

        <EditText
            android:id="@+id/EditTextGetIngredients"
            android:layout_width="155dp"
            android:layout_height="249dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="28dp"
            android:background="#CCCCCC"
            android:text="@string/AddtoIngredients"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EditTextGetDescription"
            tools:text="@string/AddtoIngredients" />

        <EditText
            android:id="@+id/EditTextGetDescription"
            android:layout_width="305dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:background="#CCCCCC"
            android:text="@string/Description"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EditTextGetTitle"
            tools:text="@string/Description" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="263dp"
            android:layout_height="46dp"
            android:layout_marginTop="4dp"
            android:text="@string/AddRecipe"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/AddRecipe" />

        <EditText
            android:id="@+id/EditTextGetTitle"
            android:layout_width="296dp"
            android:layout_height="53dp"
            android:background="#CCCCCC"
            android:text="@string/Title"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:text="@string/Title" />

        <CheckBox
            android:id="@+id/checkBoxFavourites"
            android:layout_width="150dp"
            android:layout_height="49dp"
            android:layout_marginEnd="24dp"
            android:text="@string/AddToFavourites"
            app:layout_constraintEnd_toStartOf="@+id/EditTextGetIngredients"
            app:layout_constraintTop_toBottomOf="@+id/imgBtnTakePic"
            tools:text="@string/AddToFavourites" />

        <Button
            android:id="@+id/btnCreateRecipe"
            android:layout_width="153dp"
            android:layout_height="89dp"
            android:backgroundTint="#D65BF3"
            android:text="@string/Create"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toEndOf="@+id/checkBoxDinner"
            app:layout_constraintTop_toBottomOf="@+id/EditTextGetIngredients"
            app:layout_constraintVertical_bias="0.062"
            tools:text="@string/Create" />

        <ImageButton
            android:id="@+id/imgBtnTakePic"
            android:layout_width="165dp"
            android:layout_height="62dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/EditTextGetIngredients"
            app:layout_constraintTop_toBottomOf="@+id/EditTextGetDescription"
            app:srcCompat="@android:drawable/ic_menu_camera" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>