<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigator"
        android:layout_width="411dp"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        app:itemBackground="@color/white"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/menu" />

    <Button
        android:id="@+id/btnBreakFast"
        android:layout_width="321dp"
        android:layout_height="69dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        android:text="@string/Breakfast"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLunch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/Breakfast" />

    <TextView
        android:id="@+id/txtTitle2"
        android:layout_width="227dp"
        android:layout_height="71dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/btnFavourites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87"
        tools:text="@string/app_name" />

    <Button
        android:id="@+id/btnOther"
        android:layout_width="321dp"
        android:layout_height="69dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/Other"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/Other" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="144dp"
        android:layout_height="107dp"
        app:layout_constraintBottom_toTopOf="@+id/btnFavourites"
        app:layout_constraintEnd_toStartOf="@+id/txtTitle2"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btnDinner"
        android:layout_width="321dp"
        android:layout_height="69dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/white"
        android:text="@string/Dinner"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnOther"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/Dinner" />

    <Button
        android:id="@+id/btnLunch"
        android:layout_width="321dp"
        android:layout_height="69dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/white"
        android:text="@string/Lunch"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnDinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/Lunch" />

    <Button
        android:id="@+id/btnFavourites"
        android:layout_width="321dp"
        android:layout_height="69dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/white"
        android:text="@string/Favourites"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnBreakFast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/Favourites" />

</androidx.constraintlayout.widget.ConstraintLayout>
